# Aiko

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  _analyze_webserver.py  _analyze_webserver2.py  _spec_chat.json  _spec_init_detectors.json  _spec_init_idle.json  _spec_init_speaking.json  _spec_lifecycle.json  _spec_listeners.json  _spec_llmclients.json  _spec_llmsettings.json  _spec_proactive.json  _spec_tools.json  _spec_voice.json  _spec_voicecap.json  _split_innerlife.py  _split_mcp.py  _split_settings.py  _split_webserver.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: config-documentation.mdc  mcp-server.mdc
.github/: copilot-instructions.md
app/: __init__.py  main.py  mcp_coding_server.py
app/actions/: __init__.py  emergency_stop.py  executor.py
app/audio/: __init__.py  client_mic_source.py  earcons.py  mic_capture.py  system_loopback.py
app/config/: user.json
app/core/: __init__.py  action_intent.py  affect_rupture_detector.py  affect_state.py  agenda.py  aiko_style_tracker.py  ambient_noise.py  anniversary.py  avatar_profile.py  backchannel_classifier.py  belief_gap_detector.py  belief_store.py  belief_worker.py  cadence.py  calibration_detector.py  calibration_store.py  callback_detector.py  catchphrase_miner.py  chat_database.py  circadian.py  conflict_heuristics.py  conversation_arc.py  conversation_memory.py  crash_logging.py  curiosity_seed_worker.py  curiosity_worker.py  dialogue_act_tagger.py  document_ingestor.py  dream_worker.py  fact_check_privacy.py  fact_check_queue.py  fact_check_rate_limiter.py  filler_injector.py  follow_up_worker.py  garden_visit_worker.py  goal_store.py  goal_worker.py  grounding_line.py  idle_curiosity_worker.py  idle_fact_checker.py  (+55 more)
app/llm/: __init__.py  agent_controller.py  agno_agent.py  browser_snapshot_compress.py  builtin_tools.py  chat_client.py  embedder.py  embedding_service.py  factory.py  langchain_agent.py  llm_gate.py  ollama_client.py  openai_compatible_client.py  proactive_planner.py  prompt_builder.py  token_utils.py
app/mcp/: __init__.py  runner.py  server.py
app/plugins/: __init__.py  loader.py  runtime.py  sdk.py
app/stt/: __init__.py  endpointing.py  prosody_fast.py  realtime_stt_service.py  wake_word.py  whisper_service.py
app/tts/: __init__.py  base.py  kokoro_service.py  llasa_service.py  piper_service.py  pocket_tts_service.py  pykokoro_service.py  style_bert_vits2_service.py
app/ui/: avatar_bridge.py  avatar_panel.py  decision_trace_dialog.py  geometry_mixin.py  live_worker.py  main_window.py  markdown_renderer.py  memory_viewer_dialog.py  ocr_test_worker.py  settings_dialog.py  startup_preloader.py  stt_test_worker.py  theme.py  turn_worker.py  voice_cloning_dialog.py
app/vision/: __init__.py  ocr.py  screen_capture.py  uia_service.py
app/web/: __init__.py  __main__.py  audio_frames.py  runner.py  server.py
config/: default.json  default.yaml  mcp.servers.json  playwright.config.json  tooling.default.json  tooling.default.yaml  tooling.user.yaml
data/: README.md  assistant_background.txt
data/persona/: aiko_companion.txt  aiko_companion_backup.txt  aiko_english_tutor.txt  golden_turns.jsonl  learner_profile.template.json  self_image.txt
data/personas/: README.md
docker/: entrypoint.sh
docs/: Alexia-my-observation.md  agno-toolkits-deps.md  aiko-room.md  alexia-model-notes.md  brain-orchestration.md  browser-perception.md  configuration.md  docker.md  install-macos.md  live-flow-speedup.md  live-speaking-plan.md  llm-providers.md  mcp-clients.md  memory-tiers.md  personality-backlog.md  plugins.md  presence-and-activity.md  prompt-caching.md  shared-moments-and-relationship.md  skills-framework.md  task-approvals.md  tauri-shell.md  toolkits-deps.md  voice-mode.md  weather-sync.md
docs/personality-backlog/: avatar.md  awareness.md  immersion.md  index.md  integration.md  moments.md  patterns.md  perf.md  plugin-system.md  proactive.md  shipped.md  tools.md  workers.md
english_speaking_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plugins/browser/: entry.py  plugin.json
plugins/calculator/: entry.py  plugin.json
plugins/filesystem/: entry.py  plugin.json
resources/: chat.html
resources/avatar/: avatar.js  index.html
rules/: README.md  code-conventions.md  debugging.md  mcp-server.md
scripts/: check-clean-build.py  fetch_live2d_core.py  generate_alexia_motions.py  macos-start-backend.sh  setup-macos.sh  translate_alexia_cdi3.py
tests/: test_action_execution_service.py  test_action_execution_service_mcp.py  test_action_planner_intent_detection.py  test_activity_selection.py  test_affect_rupture_detector.py  test_affect_state.py  test_affection_style.py  test_affection_style_worker.py  test_agenda.py  test_agentic_native_tool_flow.py  test_agentic_session_flow.py  test_aiko_style_tracker.py  test_alexia_motions_script.py  test_ambient_noise.py  test_anniversary_provider.py  test_appreciation_provider.py  test_arc_self_tag.py  test_associative_wander.py  test_attachments.py  test_audio_frame_protocol.py  test_avatar_profile.py  test_backchannel_classifier.py  test_belief_gap_detector.py  test_belief_store.py  test_belief_worker.py  test_brain_event_queue.py  test_brain_log_correlation.py  test_brain_log_fields.py  test_brain_loop_consume.py  test_brain_loop_gate.py  test_browser_perception.py  test_browser_perception_settings.py  test_browser_snapshot_compress.py  test_cadence.py  test_cadence_prosody_overlay.py  test_calc_safe_eval.py  test_calculator_plugin.py  test_calibration_detector.py  test_calibration_store.py  test_callback_detector.py  (+318 more)
tools/: tts_speed_ab.py
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: lib.rs  main.rs
(+627 files in other folders)
