[project]
name = "english-speaking-assistant"
version = "0.2.0"
description = "Aiko: a web-based AI companion with Ollama chat, RealtimeSTT, Pocket-TTS, Live2D avatar, and LanceDB-backed RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # HTTP + audio I/O
  "requests>=2.32.3",
  "sounddevice>=0.5.1",
  "numpy>=2.2.3",
  "soundfile>=0.13.0",
  "audioop-lts>=0.2.1; python_version>='3.13'",
  # Web/MCP servers
  "uvicorn>=0.30.0",
  "mcp>=1.0.0",
  # Speech-to-text and text-to-speech
  "realtimestt>=0.3.100",
  "pocket-tts>=1.1.0",
  # RAG: LanceDB-backed vector store for memories, messages, and documents.
  "lancedb>=0.13.0",
  "pyarrow>=16.0.0",
  # Optional document ingestion (PDF). Pure-python; tiny footprint.
  "pypdf>=4.0.0",
  # Web search tool
  "duckduckgo-search>=6.0.0",
]

[project.optional-dependencies]
wake-word = [
  "openwakeword>=0.6.0",
]
dev = [
  "pytest>=8.0.0",
]
all = [
  "english-speaking-assistant[wake-word,dev]",
]

[project.scripts]
aiko-web = "app.web.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

[tool.ruff]
line-length = 100
