[project]
name = "english-speaking-assistant"
version = "0.2.0"
description = "Aiko: a web-based AI companion with Ollama chat, RealtimeSTT, Pocket-TTS, Live2D avatar, and LanceDB-backed RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # HTTP + audio processing
  "requests>=2.32.3",
  "numpy>=2.2.3",
  "scipy>=1.13.0",
  "soundfile>=0.13.0",
  "audioop-lts>=0.2.1; python_version>='3.13'",
  # Web/MCP servers. FastAPI backs the whole HTTP/WebSocket layer
  # (app/web/server.py + all REST modules); pin it explicitly rather
  # than relying on it arriving transitively through ``mcp`` so a clean
  # install (e.g. a slim Docker image) can't boot without it.
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "mcp>=1.0.0",
  # RAG: LanceDB-backed vector store for memories, messages, and documents.
  "lancedb>=0.13.0",
  "pyarrow>=16.0.0",
  # K9 topic graph: Louvain community detection over the mutual-k-NN graph.
  "networkx>=3.0",
  # Optional document ingestion (PDF). Pure-python; tiny footprint.
  "pypdf>=4.0.0",
  # Web search tool (the package formerly published as duckduckgo-search)
  "ddgs>=9.0.0",
  # Secure API-key storage in the OS keychain (Windows Credential
  # Manager / macOS Keychain / Freedesktop Secret Service). Falls back
  # to plaintext config when no backend is present.
  "keyring>=25.0.0",
]

[project.optional-dependencies]
# Server-side voice: speech-to-text (RealtimeSTT -> faster-whisper +
# Silero VAD) and text-to-speech (Pocket-TTS). These pull in the heavy
# PyTorch / whisper stack, so they live behind an extra: the core app
# imports them defensively (try/except in app/stt + app/tts) and boots
# fine text-only when they're absent. ``pip install .`` = slim/text;
# ``pip install .[voice]`` = full voice. The slim Docker image omits
# this extra; the full image installs it.
voice = [
  "realtimestt>=0.3.100",
  "pocket-tts>=1.1.0",
]
wake-word = [
  "openwakeword>=0.6.0",
]
dev = [
  "pytest>=8.0.0",
]
all = [
  "english-speaking-assistant[voice,wake-word,dev]",
]

[project.scripts]
aiko-web = "app.web.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

[tool.ruff]
line-length = 100
