[package]
name = "aiko-desktop"
version = "0.1.0"
description = "Aiko desktop shell — Tauri 2 wrapper around the existing FastAPI + React assistant."
authors = ["bluna"]
edition = "2021"

# Library exposed for both the binary and the Tauri mobile entrypoint.
# Keeping the bulk of the wiring in src/lib.rs lets the binary stay minimal
# and lines us up cleanly for a future iOS / Android target.
[lib]
name = "aiko_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Default to the desktop variant. Mobile targets opt out via cargo features.
custom-protocol = ["tauri/custom-protocol"]
