[package]
name = "aiko-desktop"
version = "0.1.0"
description = "Aiko desktop shell — Tauri 2 wrapper around the existing FastAPI + React assistant."
authors = ["bluna"]
edition = "2021"

# Library exposed for both the binary and the Tauri mobile entrypoint.
# Keeping the bulk of the wiring in src/lib.rs lets the binary stay minimal
# and lines us up cleanly for a future iOS / Android target.
[lib]
name = "aiko_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Foreground-app detection. Cross-platform on Windows / macOS / X11.
# Wayland support is best-effort: the crate falls back to ``Err`` on
# unsupported sessions, which we map to ``None`` in ``get_active_app``
# so the activity-awareness block silently degrades to "no signal".
active-win-pos-rs = "0.9"

# Persist + restore window position and size between launches. The
# plugin only makes sense on desktop platforms (mobile windows have
# their geometry dictated by the OS), so it is gated behind a
# ``cfg`` target predicate. The ``setup`` block in ``lib.rs`` mirrors
# this gate with ``#[cfg(desktop)]``.
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2.4.1"

[features]
# Default to the desktop variant. Mobile targets opt out via cargo features.
custom-protocol = ["tauri/custom-protocol"]
